# lovv_data_collect

./: .env.example  .gitignore  AGENTS.ko.md  AGENTS.md  README.md  pyproject.toml
MAX/: AGENTS.md
MAX/modes/: hybrid.md  parallel.md  sequential.md
crawling/: requirements.txt
crawling/JP/: __init__.py  city_wikipedia_acquisition.py  korean_names.py  models.py  normalizer.py  pipeline.py  prefectures.py  wikipedia_client.py
crawling/KR/: __init__.py  models.py  provinces.py  tour_api_city_detail_acquisition.py  tour_api_detail_harvester.py  tour_api_region_detail_acquisition.py  wikipedia_client.py
data/JP/: cities.json  prefectures.json
data/KR/: cities.json  prefectures.json
docs/: japan_data_acquisition_plan.md  s3_vector_index_implementation_plan.md  s3_vector_index_prd.md
docs/agents/: agent-creation-guidelines.md  commit-convention.md  context-loading.md  review-format.md  security-review-checklist.md  spec-task-format.md
docs/prompts/: crawl-task-prompt.md
docs/reports/: graphrag_lambda_implementation_review.md  korea_data_preprocessing_result_report.md  preprocessing_report.md  query_usage_guide.md  s3_vector_console_test_usage.md  s3_vector_graphrag_usage_report.md  s3_vector_index_infra_report.md  work_progress_report.md
docs/specs/: city_data_acquisition_spec.md  city_data_acquisition_spec_ko.md  data_pipeline_spec.md  kr_details_elt_spec.md  raw_preprocessing_dynamodb_spec.md  s3_vector_index_spec.md
infrastructure/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+65 files in other folders)
