[project]
name = "lovv-data-collect"
version = "0.1.0"
description = "Lovv KR data collection and S3 raw ingest utilities."
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "boto3>=1.34,<2",
    "requests>=2.31,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kr_details_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["src", "crawling"]
